--- a/app/assets/stylesheets/_exhibition.scss
+++ b/app/assets/stylesheets/_exhibition.scss
@@ -9,6 +9,8 @@
     text-decoration: underline;
   }
 }
+
+
 .exhibition {
   background-color: rgb(245, 245, 245);
   width: 100vw;
@@ -55,9 +57,6 @@ main {
     line-height: 1.5;
     text-align: center;
   }
-  &__form {
-    border-top: 1px solid #eee;
-  }
 }
 
 .sell--upload {
@@ -76,73 +75,93 @@ main {
     margin: 8px 0 0;
     line-height: 1.5;
   }
-  &__items {
-    float: left;
-    display: block;
-  }
-  &__items ul {
-    display: block;
-    width: 100%;
-  }
-  &__drop__box {
-    width: 100%;
-    margin-top: 10px;
-    height: 160px;
-    flex: 1;
-    position: relative;
-    text-align: center;
-    cursor: pointer;
-    &__imageview{
-      float: left;
-      background: #f5f5f5;
-      border: 1px dashed #ccc;
-      height: 160px;
-      width: 100%;
-      .uploadimg{
-        padding-top: 25px;
-        height: 100px;
+}
+
+.post__drop__box__container{
+  display: block;
+  margin: 16px auto 0;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 14px;
+
+  .prev-content {
+    display: flex;
+    .preview-box {
+      height: 162px;
+      width: 112px;
+      margin: 0 15px 10px 0;
+      .upper-box {
+        height: 112px;
+        width: 100%;
+        img{
+          width: 112px;
+          height: 112px;
+        }
       }
-      .img_del{
-        color: #0099e8;
-;
-        font-weight: 400;
-        cursor: pointer;
-        font-size:14px;
+      .lower-box {
+        display: flex;
         text-align: center;
-        position:relative;
-        top:30px;
-        &:hover{
-          opacity: 0.5 ;
+        .update-box {
+          color: #00b0ff;
+          width: 50%;
+          height: 50px;
+          line-height: 50px;
+          border: 1px solid #eee;
+          background: #f5f5f5;
+          cursor: pointer;
+        }
+        .delete-box {
+          color: #00b0ff;
+          width: 50%;
+          height: 50px;
+          line-height: 50px;
+          border: 1px solid #eee;
+          background: #f5f5f5;
+          cursor: pointer;
         }
       }
     }
-    img{
-      height:161px;
-      width:150px;
+  }
+
+  .label-content{
+    margin-bottom: 10px;
+    width: 620px;
+    .label-box {
+      display: block;
+      border: 1px dashed #ccc;
       position: relative;
-      z-index: 2
+      background: #f5f5f5;
+      width: 100%;
+      height: 162px;
+      cursor: pointer;
+      &__text-visible {
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        right: 16px;
+        text-align: center;
+        font-size: 14px;
+        line-height: 1.5;
+        font-weight: bold;
+        -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        pointer-events: none;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
     }
   }
-  &__drop__box pre {
-    position: absolute;
-    top: 40%;
-    left: 16px;
-    right: 16px;
-    text-align: center;
-    font-size: 14px;
-    line-height: 1.5;
-    transform: translate(0, -50%);
-    pointer-events: none;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    overflow: auto;
+
+  .hidden-content {
+    .hidden-field {
+      display: none;
+    }
+    .hidden-checkbox {
+      display: none;
+    }
   }
 }
-.sell__dropbox__container {
-  display: block;
-  width: 620px;
-  margin: 16px auto 0;
-}
+
 .sell__content {
   font-weight: 14px;
   padding: 40px;
@@ -207,11 +226,6 @@ main {
   background: #fff;
   line-height: 1.5;
   font-size: 16px;
-}
-label {
-  display: inline-block;
-    margin: 8px 0 0 5px;
-
 }
 .textarea__default {
   display: block;
@@ -442,4 +456,3 @@ label {
   }
 }
 }
-
