--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -15,14 +15,27 @@
                   出品画像
                   %span.form--require 必須
                 %p 最大10枚までアップロードできます
-                = f.fields_for :images do |i|
-                  = i.label :image, class: "sell--upload__drop__box" do
-                    .sell--upload__drop__box__imageview
-                      = i.file_field :image,rquired: true,class:"file",style:"display:none;"
-                      %pre
-                        #preview
-                          ドラッグドラッグアンドドロップ
-                          またはクリックしてファイルをアップロード
+                .post__drop__box__container
+                  .prev-content
+                    - @item.images.each do |image|
+                      .preview-box
+                        .upper-box
+                          = image_tag image.image.url, width: "112", height: "112", alt: "preview"
+                        .lower-box
+                          .update-box
+                            %label.edit-btn 編集
+                          .delete-box
+                            .delete-btn
+                              %span 削除
+                  .label-content
+                    = f.label :"images_attributes_#{@item.images.length}_image", class: "label-box", id: "label-box--#{@item.images.length}" do
+                      %pre.label-box__text-visible クリックしてファイルをアップロード
+                  .hidden-content
+                    = f.fields_for :images do |i|
+                      = i.file_field :image, class: "hidden-field"
+                      = i.check_box:_destroy, class: "hidden-checkbox"
+                    - @item.images.length.upto(4) do |i|
+                      %input{name: "item[images_attributes][#{i}][image]", id: "item_images_attributes_#{i}_image", class:"hidden-field", type:"file"}
               .sell__content
                 .form__group
                   %label
