--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -1,6 +1,6 @@
-.exhibition
-  .exhibition__header
-    .exhibition__header-logo
+.edit
+  .edit__header
+    .edit__header-logo
       = link_to image_tag(src="fmarket_logo_red.svg"),root_path
 
   %main#main
@@ -144,17 +144,17 @@
                 = link_to 'キャンセル', "/items/#{@item.id}", class: "btn--gray"
 
           
-  .exhibition__footer
-  .exhibition__footer-links
-    .exhibition__footer-links-title
+  .edit__footer
+  .edit__footer-links
+    .edit__footer-links-title
       =link_to "プライバシーポリシー", "https://www.mercari.com/jp/privacy/"
-    .exhibition__footer-links-title
+    .edit__footer-links-title
       =link_to "メルカリ利用規約", "https://www.mercari.com/jp/tos/"
-    .exhibition__footer-links-title
+    .edit__footer-links-title
       =link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/"
-  .exhibition__footer-image
+  .edit__footer-image
     = link_to image_tag(src="logo_white.svg"),root_path
-  .exhibition__footer-end
+  .edit__footer-end
     © Mercari, Inc.
 
 
